# portfolio_project

./: .gitignore  .pre-commit-config.yaml  DockerFile  README.md  __main__.py  docker-compose.yaml  pyproject.toml
.github/workflows/: ci-pipelines.yml
asset_selector/: __init__.py
asset_selector/configs/: data_sources.py  directories.py  halfspace_dark.mplstyle  halfspace_light.mplstyle  run.py  static.py  style.py
asset_selector/data/silver/: skat_dk.txt
asset_selector/etl/bronze/: bronze.py  get_asset_history.py  get_skatspositiv_liste.py
asset_selector/utils/: data_helpers.py  helpers.py
data/bronze/: isin_to_ticker_dictionary.pkl
data/bronze/skats_positivliste_xml/: abis-listen-24062024.xlsx
tests/: test_tests.py
